// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Lead" renders (dark theme) 1`] = `
<div
  className="css-1mc7zwm-StyledAppContainer"
>
  <p
    className="css-bje2y9-Lead"
  >
    Lead
  </p>
</div>
`;

exports[`"Lead" renders 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <p
    className="css-h0aqb6-Lead"
  >
    Lead
  </p>
</div>
`;

exports[`"Paragraph" renders (dark theme) 1`] = `
<div
  className="css-1mc7zwm-StyledAppContainer"
>
  <p
    className="css-15evjgv-Paragraph"
  >
    Paragraph
  </p>
</div>
`;

exports[`"Paragraph" renders 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <p
    className="css-1by25mu-Paragraph"
  >
    Paragraph
  </p>
</div>
`;
